--- a/infra/manifests/db/role.yaml
+++ b/infra/manifests/db/role.yaml
@@ -6,5 +6,5 @@ metadata:
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
-    resourceNames: ["debezium-secret"]
+    resourceNames: ["postgres-secret"]
     verbs: ["get"]
