--- a/infra/manifests/kafka/brokers.yaml
+++ b/infra/manifests/kafka/brokers.yaml
@@ -1,14 +1,13 @@
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaNodePool
 metadata:
-  name: dual-role
+  name: my-workers
   namespace: kafka
   labels:
     strimzi.io/cluster: my-cluster
 spec:
   replicas: 1
   roles:
-    - controller
     - broker
   storage:
     type: jbod
@@ -16,4 +15,4 @@ spec:
       - id: 0
         type: persistent-claim
         size: 10Gi
-        deleteClaim: false
+        deleteClaim: true
