--- a/infra/values/kube-prometheus-stack.yaml
+++ b/infra/values/kube-prometheus-stack.yaml
@@ -6,3 +6,8 @@ grafana:
 
 nodeExporter:
   enabled: false
+
+prometheus:
+  prometheusSpec:
+    podMonitorSelector: {}
+    podMonitorNamespaceSelector: {}
