--- a/infra/manifests/secrets/mongo.yaml
+++ b/infra/manifests/secrets/mongo.yaml
@@ -6,7 +6,6 @@ metadata:
 type: Opaque
 stringData:
   username: ${DB_USER}
-  host: ${DB_HOST}
-  auth: ${DB_AUTH}
+  connectionString: ${DB_CONNECT_STRING}
 data:
   password: ${DB_PWD}
